WIP for fixing tests