@@ -12,74 +12,69 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpSession;
 import lombok.SneakyThrows;
 import oidc.endpoints.AuthorizationEndpoint;
-import oidc.exceptions.CookiesNotSupportedException;
-import oidc.exceptions.InvalidGrantException;
-import oidc.exceptions.JWTRequestURIMismatchException;
-import oidc.exceptions.UnknownClientException;
+import oidc.exceptions.*;
 import oidc.log.MDCContext;
 import oidc.manage.ServiceProviderTranslation;
 import oidc.model.OpenIDClient;
 import oidc.repository.AuthenticationRequestRepository;
 import oidc.repository.OpenIDClientRepository;
 import oidc.secure.JWTRequest;
-import oidc.web.URLCoding;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.opensaml.core.config.ConfigurationService;
 import org.opensaml.core.xml.config.XMLObjectProviderRegistry;
 import org.opensaml.saml.saml2.core.*;
 import org.opensaml.saml.saml2.core.impl.*;
-import org.springframework.core.convert.converter.Converter;
-import org.springframework.security.saml2.provider.service.authentication.Saml2AuthenticationToken;
 import org.springframework.security.saml2.provider.service.registration.RelyingPartyRegistration;
+import org.springframework.security.saml2.provider.service.web.authentication.OpenSaml4AuthenticationRequestResolver;
 import org.springframework.security.web.savedrequest.RequestCache;
 import org.springframework.security.web.savedrequest.SavedRequest;
 import org.springframework.util.CollectionUtils;
 import org.springframework.util.StringUtils;
+import org.springframework.web.servlet.HandlerExceptionResolver;
 
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URLDecoder;
 import java.nio.charset.Charset;
 import java.security.cert.CertificateException;
-import java.time.Instant;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.util.*;
+import java.util.function.Consumer;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static oidc.saml.AuthnRequestContextConsumer.REDIRECT_URI_VALID;
-import static org.springframework.security.saml2.provider.service.registration.Saml2MessageBinding.POST;
 
+public class AuthnRequestContextConsumer implements Consumer<OpenSaml4AuthenticationRequestResolver.AuthnRequestContext> {
 
-public class AuthnRequestConverter implements
-        Converter<Saml2AuthenticationToken, AuthnRequest>, URLCoding {
+    public final static String REDIRECT_URI_VALID = "REDIRECT_URI_VALID";
 
-
-    private static final Log LOG = LogFactory.getLog(AuthnRequestConverter.class);
+    private static final Log LOG = LogFactory.getLog(AuthnRequestContextConsumer.class);
 
     private final OpenIDClientRepository openIDClientRepository;
     private final AuthenticationRequestRepository authenticationRequestRepository;
     private final XMLObjectProviderRegistry registry = ConfigurationService.get(XMLObjectProviderRegistry.class);
     private final RequestCache requestCache;
+    private final HandlerExceptionResolver handlerExceptionResolver;
 
-    public AuthnRequestConverter(OpenIDClientRepository openIDClientRepository,
-                                 AuthenticationRequestRepository authenticationRequestRepository,
-                                 RequestCache requestCache) {
+    public AuthnRequestContextConsumer(OpenIDClientRepository openIDClientRepository,
+                                       AuthenticationRequestRepository authenticationRequestRepository,
+                                       RequestCache requestCache, HandlerExceptionResolver handlerExceptionResolver) {
 
         this.openIDClientRepository = openIDClientRepository;
         this.authenticationRequestRepository = authenticationRequestRepository;
         this.requestCache = requestCache;
+        this.handlerExceptionResolver = handlerExceptionResolver;
     }
 
-    @SneakyThrows
     @Override
-    public AuthnRequest convert(Saml2AuthenticationToken ctx) {
-        CustomSaml2AuthenticationRequestContext context = (CustomSaml2AuthenticationRequestContext) ctx;
-        HttpServletRequest request = context.getRequest();
+    public void accept(OpenSaml4AuthenticationRequestResolver.AuthnRequestContext authnRequestContext) {
+        AuthnRequest authnRequest = authnRequestContext.getAuthnRequest();
+        RelyingPartyRegistration relyingParty = authnRequestContext.getRelyingPartyRegistration();
+
+        HttpServletRequest request = authnRequestContext.getRequest();
 
         HttpSession session = request.getSession(false);
         if (session == null) {
@@ -119,107 +114,42 @@ public class AuthnRequestConverter implements
             }
         } else {
             List<String> redirectUris = parameters.get("redirect_uri");
-            URI redirectURI = CollectionUtils.isEmpty(redirectUris) ? null : new URI(redirectUris.get(0));
+
+            URI redirectURI = CollectionUtils.isEmpty(redirectUris) ? null : URI.create(redirectUris.get(0));
 
             AuthorizationEndpoint.validateRedirectionURI(redirectURI, openIDClient);
             request.setAttribute(REDIRECT_URI_VALID, true);
-
-            AuthorizationRequest authorizationRequest = AuthorizationRequest.parse(parameters);
+            AuthorizationRequest authorizationRequest = null;
+            try {
+                authorizationRequest = AuthorizationRequest.parse(parameters);
+            } catch (ParseException e) {
+                throw new WrappingException(e.getMessage(), e);
+            }
 
             validateAuthorizationRequest(authorizationRequest, openIDClient);
         }
 
-        RelyingPartyRegistration relyingParty = context.getRelyingPartyRegistration();
-        AuthnRequestBuilder authnRequestBuilder = (AuthnRequestBuilder) registry.getBuilderFactory()
-                .getBuilder(AuthnRequest.DEFAULT_ELEMENT_NAME);
-        AuthnRequest authnRequest = authnRequestBuilder.buildObject();
-        authnRequest.setID("ARQ" + UUID.randomUUID().toString().substring(1));
-        authnRequest.setIssueInstant(Instant.now());
-
-        authnRequest.setProtocolBinding(POST.getUrn());
-
-        IssuerBuilder issuerBuilder = (IssuerBuilder) registry.getBuilderFactory()
-                .getBuilder(Issuer.DEFAULT_ELEMENT_NAME);
-
-        Issuer issuer = issuerBuilder.buildObject();
-        issuer.setValue(relyingParty.getEntityId());
-        authnRequest.setIssuer(issuer);
-        // @TODO: correct retrieval of data?
-        authnRequest.setDestination(context.getRelyingPartyRegistration().getAssertingPartyDetails().getSingleSignOnServiceLocation());
-        authnRequest.setAssertionConsumerServiceURL(context.getRelyingPartyRegistration().getAssertionConsumerServiceLocation());
-
+//        authnRequest.setID("ARQ" + UUID.randomUUID().toString().substring(1));
+//        authnRequest.setIssueInstant(Instant.now());
+//
+//        authnRequest.setProtocolBinding(POST.getUrn());
+//
+//        IssuerBuilder issuerBuilder = (IssuerBuilder) registry.getBuilderFactory()
+//                .getBuilder(Issuer.DEFAULT_ELEMENT_NAME);
+//
+//        Issuer issuer = issuerBuilder.buildObject();
+//        issuer.setValue(relyingParty.getEntityId());
+//        authnRequest.setIssuer(issuer);
+//        // @TODO: correct retrieval of data?
+//        authnRequest.setDestination(relyingParty.getAssertingPartyDetails().getSingleSignOnServiceLocation());
+//        authnRequest.setAssertionConsumerServiceURL(relyingParty.getAssertionConsumerServiceLocation());
         saveAuthenticationRequestUrl(savedRequest, authnRequest, new ClientID(clientId));
-        return enhanceAuthenticationRequest(authnRequest, parameters);
-    }
 
-    public void enrichAuthnRequest(AuthnRequest authnRequest, RelyingPartyRegistration relyingParty,
-                                   HttpServletRequest request)
-            throws ParseException, URISyntaxException, UnsupportedEncodingException {
+        try {
+            enhanceAuthenticationRequest(authnRequest, parameters);
+        } catch (Exception e) {
 
-        HttpSession session = request.getSession(false);
-        if (session == null) {
-            LOG.warn("There is no session in the HttpServletRequest. CookiesNotSupportedException will be thrown");
-        } else {
-            Enumeration<String> attributeNames = session.getAttributeNames();
-            List<String> list = Collections.list(attributeNames);
-            if (!list.contains("SPRING_SECURITY_SAVED_REQUEST")) {
-                LOG.warn("There is a session in the HttpServletRequest with ID " + session.getId() + " which does not contain a saved request. Attribute names are: " + list);
-            }
         }
-
-        SavedRequest savedRequest = requestCache.getRequest(request, null);
-
-        if (savedRequest == null) {
-            throw new CookiesNotSupportedException();
-        }
-
-        Map<String, String[]> parameterMap = savedRequest.getParameterMap();
-        Map<String, List<String>> parameters = parameterMap.keySet().stream()
-                .collect(Collectors.toMap(key -> key, key -> Arrays.asList(parameterMap.get(key))));
-        List<String> clientIds = parameters.get("client_id");
-        String clientId = CollectionUtils.isEmpty(clientIds) ? null : clientIds.get(0);
-        if (!StringUtils.hasText(clientId)) {
-            throw new UnknownClientException(String.format("client_id parameter missing in parameters: %s", parameters));
-        }
-        OpenIDClient openIDClient = openIDClientRepository.findOptionalByClientId(clientId)
-                .orElseThrow(() -> new UnknownClientException(clientId));
-
-        //If this a device code flow, we don't validate redirect URI's
-        List<String> userCode = parameters.get("user_code");
-        if (!CollectionUtils.isEmpty(userCode)) {
-            List<String> grants = openIDClient.getGrants();
-            if (!grants.contains(GrantType.DEVICE_CODE.getValue())) {
-                throw new InvalidGrantException(String.format("Grant types %s for client %s does not allow for device code flow",
-                        grants, openIDClient.getClientId()));
-            }
-        } else {
-            List<String> redirectUris = parameters.get("redirect_uri");
-            URI redirectURI = CollectionUtils.isEmpty(redirectUris) ? null : new URI(redirectUris.get(0));
-
-            AuthorizationEndpoint.validateRedirectionURI(redirectURI, openIDClient);
-            request.setAttribute(REDIRECT_URI_VALID, true);
-
-            AuthorizationRequest authorizationRequest = AuthorizationRequest.parse(parameters);
-
-            validateAuthorizationRequest(authorizationRequest, openIDClient);
-        }
-
-        authnRequest.setID("ARQ" + UUID.randomUUID().toString().substring(1));
-        authnRequest.setIssueInstant(Instant.now());
-
-        authnRequest.setProtocolBinding(POST.getUrn());
-
-        IssuerBuilder issuerBuilder = (IssuerBuilder) registry.getBuilderFactory()
-                .getBuilder(Issuer.DEFAULT_ELEMENT_NAME);
-
-        Issuer issuer = issuerBuilder.buildObject();
-        issuer.setValue(relyingParty.getEntityId());
-        authnRequest.setIssuer(issuer);
-        // @TODO: correct retrieval of data?
-        authnRequest.setDestination(relyingParty.getAssertingPartyDetails().getSingleSignOnServiceLocation());
-        authnRequest.setAssertionConsumerServiceURL(relyingParty.getAssertionConsumerServiceLocation());
-
-        enhanceAuthenticationRequest(authnRequest, parameters);
     }
 
     @SneakyThrows
@@ -236,8 +166,8 @@ public class AuthnRequestConverter implements
         return CollectionUtils.isEmpty(values) ? null : values.get(0);
     }
 
-    private AuthnRequest enhanceAuthenticationRequest(AuthnRequest authnRequest,
-                                                      Map<String, List<String>> request) throws ParseException, UnsupportedEncodingException {
+    private void enhanceAuthenticationRequest(AuthnRequest authnRequest,
+                                                      Map<String, List<String>> request) throws ParseException, BadJOSEException, CertificateException, IOException, java.text.ParseException, URISyntaxException, JOSEException {
         String clientId = param("client_id", request);
 
         String entityId = ServiceProviderTranslation.translateClientId(clientId);
@@ -268,7 +198,6 @@ public class AuthnRequestConverter implements
                         String.format("JWT request_uri mismatch for RP %s. Requested %s, configured %s",
                                 openIDClient.getClientId(), requestUrlP, openIDClient.getJwtRequestUri()));
             }
-            try {
                 com.nimbusds.openid.connect.sdk.AuthenticationRequest authRequest =
                         com.nimbusds.openid.connect.sdk.AuthenticationRequest.parse(request);
                 authRequest = JWTRequest.parse(authRequest, openIDClient);
@@ -282,19 +211,14 @@ public class AuthnRequestConverter implements
                 if (!authnRequest.isForceAuthn() && prompt != null) {
                     authnRequest.setForceAuthn(prompt.contains("login"));
                 }
-            } catch (CertificateException | JOSEException | IOException | BadJOSEException |
-                     java.text.ParseException | URISyntaxException e) {
-                throw new RuntimeException(e);
-            }
         }
         String loginHint = param("login_hint", request);
         if (StringUtils.hasText(loginHint)) {
-            loginHint = URLDecoder.decode(loginHint, Charset.defaultCharset().name());
+            loginHint = URLDecoder.decode(loginHint, Charset.defaultCharset());
             IDPList idpList = addIdpEntries(loginHint);
             Scoping scoping = authnRequest.getScoping();
             scoping.setIDPList(idpList);
         }
-        return authnRequest;
     }
 
     private IDPList addIdpEntries(String loginHint) {
@@ -368,7 +292,7 @@ public class AuthnRequestConverter implements
                 AuthnContextClassRef authnContextClassRef = authnContextClassRefBuilder.buildObject();
                 authnContextClassRef.setURI(acr.getValue());
                 return authnContextClassRef;
-            }).collect(Collectors.toList());
+            }).toList();
             requestedAuthnContext.getAuthnContextClassRefs().addAll(authnContextClassRefs);
             authnRequest.setRequestedAuthnContext(requestedAuthnContext);
         }
